WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
178424
REGRESSION (
r223476
): WebCore exports symbols with names belonging to other frameworks
https://bugs.webkit.org/show_bug.cgi?id=178424
Summary
REGRESSION (r223476): WebCore exports symbols with names belonging to other f...
mitz
Reported
2017-10-17 20:19:22 PDT
<
https://trac.webkit.org/r223476
>, the fix for
bug 178229
, made WebCore export symbols identical to the ones it’s “soft linking” using the SOFT_LINK_FUNCTION_FOR_SOURCE macro. For example, now WebCore exports a function called CMClockGetTime, which is different from the CMClockGetTime that the Core Media framework exports. WebCore’s exports should all be in WebCore’s C++ namespaces or have the Web or _Web prefix.
Attachments
Patch
(1.99 KB, patch)
2017-10-18 19:44 PDT
,
Keith Miller
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2017-10-17 20:27:00 PDT
<
rdar://problem/35045237
>
Keith Miller
Comment 2
2017-10-18 19:43:07 PDT
***
Bug 178495
has been marked as a duplicate of this bug. ***
Keith Miller
Comment 3
2017-10-18 19:44:28 PDT
Created
attachment 324202
[details]
Patch
Keith Miller
Comment 4
2017-10-18 19:47:42 PDT
From nm WebCore.build/Objects-normal/x86_64/XSLTUnicodeSort.o (which calls a function, xsltEvalAttrValueTemplate, from libxslt): (__TEXT,__text) weak private external _xsltEvalAttrValueTemplate
David Kilzer (:ddkilzer)
Comment 5
2017-10-19 09:52:22 PDT
Comment on
attachment 324202
[details]
Patch r=me. We should stop soft-linking libxslt as well, but that's a separate patch.
WebKit Commit Bot
Comment 6
2017-10-19 11:18:35 PDT
Comment on
attachment 324202
[details]
Patch Clearing flags on attachment: 324202 Committed
r223693
: <
https://trac.webkit.org/changeset/223693
>
WebKit Commit Bot
Comment 7
2017-10-19 11:18:37 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug