REGRESSION (r223476): WebCore exports symbols with names belonging to other frameworks https://bugs.webkit.org/show_bug.cgi?id=178424

Reviewed by David Kilzer.

This patch moves the wrapper function sharing the name of the externed function
to the source file and marks it as always inline. Marking it as inline prevents
the framework from exporting it.

* wtf/cocoa/SoftLinking.h:


Canonical link: https://commits.webkit.org/194711@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@223693 268f45cc-cd09-0410-ab3c-d52691b4dbfc